--- a/docs/ec/ec101.md
+++ b/docs/ec/ec101.md
@@ -1,9 +1,9 @@
 ### Erasure coding 101
 
 Reed–Solomon error correction provides the base for Erasure Coding (EC). The basic idea
-is the for `n` bits of data **X** = (x<sub>1</sub>, x<sub>2</sub>, ... x<sub>n</sub>),
+is that for `n` bits of data **X** = (x<sub>1</sub>, x<sub>2</sub>, ... x<sub>n</sub>),
 one can provide `m` bits of *parity* **P** = (p<sub>1</sub>, p<sub>2</sub>, ...  p<sub>m</sub>)
-using an *m x n* matrix **S** so that 
+using an *`m x n`* matrix **S** so that 
 
 S X<sup>T</sup> = P
 
@@ -12,10 +12,9 @@ are several ways to choose the matrix **S**. Those details are beyond the scope 
 document.
 
 Xrootd uses Intel’s Intelligent Storage Acceleration Library (ISA-L) for erasure coding. 
-The functionality of ISA-L and its associated computing is performed in xrootd's client
-library XrdCl. Data chunks (that belongs to a single file) on each node are stored in a 
-single xrootd ZIP archive. 
-
+The functionality EC is performed in xrootd's client library XrdCl. On each xrootd server, 
+data chunks that belong to the same file are stored in a single xrootd ZIP archive. 
+ 
 ### Architecture of using EC in xrootd
 
 Because the EC function is implemented in the xrootd client library, a vanilla xrootd 
@@ -26,11 +25,17 @@ There are two ways to use EC in a xrootd cluster enviroment:
 
 1. Using up-to-dated xrootd client tools such as `xrdcp`, `xrdfs` and `xrootdfs`. 
    Because the up-to-dated xrootd clients are required, this method is usually only
-   good for adminstrators.
-2. Putting the xrootd cluster behind a xrootd proxy. The XrdCl (and XrdEC) componments
+   good for adminstrators on LAN.
+2. Putting the xrootd cluster behind a xrootd proxy (DTN). The XrdCl (and XrdEC) componments
    in the proxy handles the EC. This is the perferred way as it works with any xrootd
-   or http clients. The proxy also support WLCG TPC.
+   or http clients. The proxy also supports WLCG TPC.
 
 This document assumes that the administrators will use EC enabled `xrdcp/xrdfs/xrootdfs`
-for adminstrative tasks such as restore data from drive failure, moving and deleting 
+for tasks such as restore data from drive failure, moving and deleting 
 data, etc. Users will use the xrootd proxy to access data.
+
+The nature of EC means that it is better to **treat EC in xrootd as an object store**, rather
+than a posix storage. Though some posix IO functions (specially reading) are still 
+supported via the xroot protocol, it is better to think of object store functionalities: 
+upload, download, stat, dirlist, renaming, deletion, plus WLCG TPC.
+
