--- a/docs/ec/ec101.md
+++ b/docs/ec/ec101.md
@@ -5,7 +5,7 @@ is that for `n` bits of data **X** = (x<sub>1</sub>, x<sub>2</sub>, ... x<sub>n<
 one can provide `m` bits of *parity* **P** = (p<sub>1</sub>, p<sub>2</sub>, ...  p<sub>m</sub>)
 using an *`m x n`* matrix **S** so that 
 
-S X<sup>T</sup> = P
+S X<sup>T</sup> = P<sup>T</sup>
 
 If one bit of **X** is missing, it can be calculated using the above formula. There
 are several ways to choose the matrix **S**. Those details are beyond the scope of this
