--- a/docs/ec/ec101.md
+++ b/docs/ec/ec101.md
@@ -7,7 +7,8 @@ using an *`m x n`* matrix **S** so that
 
 S X<sup>T</sup> = P<sup>T</sup>
 
-If one bit of **X** is missing, it can be calculated using the above formula. There
+If up to `m` bits in **X** are missing, those missing bits can be calculated using the 
+above formula. There
 are several ways to choose the matrix **S**. Those details are beyond the scope of this
 document.
 
