update checksum script

--- a/docs/ec/ec101.md
+++ b/docs/ec/ec101.md
@@ -36,7 +36,7 @@ for tasks such as restore data from drive failure, moving and deleting
 data, etc. Users will use the xrootd proxy to access data.
 
 The nature of EC means that it is better to **treat EC in xrootd as an object store**, rather
-than a posix storage. Though some posix IO functions (specially reading) are still 
+than a posix storage. Though some posix IO functions (especially reading) are still 
 supported via the xroot protocol, it is better to think of object store functionalities: 
 upload, download, stat, dirlist, renaming, deletion, plus WLCG TPC.
 
