--- a/docs/ec/ec101.md
+++ b/docs/ec/ec101.md
@@ -1,6 +1,6 @@
 ### Erasure coding 101
 
-Reed–Solomon error correction provides the base for Erasure Coding (EC). The basic idea
+The Reed–Solomon error correction provides the base for Erasure Coding (EC). The basic idea
 is that for `n` bits of data **X** = (x<sub>1</sub>, x<sub>2</sub>, ... x<sub>n</sub>),
 one can provide `m` bits of *parity* **P** = (p<sub>1</sub>, p<sub>2</sub>, ...  p<sub>m</sub>)
 using an *`m x n`* matrix **S** so that 
