add more on admistration section

--- a/docs/ec/ec101.md
+++ b/docs/ec/ec101.md
@@ -27,7 +27,8 @@ There are two ways to use EC in a xrootd cluster enviroment:
 1. Using up-to-dated xrootd client tools such as `xrdcp`, `xrdfs` and `xrootdfs`. 
    Because the up-to-dated xrootd clients are required, this method is usually only
    good for adminstrators on LAN.
-2. Putting the xrootd cluster behind a xrootd proxy (DTN). The XrdCl (and XrdEC) componments
+2. Putting the xrootd cluster behind a xrootd proxy (DTN). The XrdCl (and its plugin XrdEC)
+   componments
    in the proxy handles the EC. This is the perferred way as it works with any xrootd
    or http clients. The proxy also supports WLCG TPC.
 
