--- a/docs/ec/ec101.md
+++ b/docs/ec/ec101.md
@@ -14,7 +14,8 @@ document.
 
 Xrootd uses Intel’s Intelligent Storage Acceleration Library (ISA-L) for erasure coding. 
 The functionality EC is performed in xrootd's client library XrdCl. On each xrootd server, 
-data chunks that belong to the same file are stored in a single xrootd ZIP archive. 
+data chunks that belong to the same file are stored in a single xrootd ZIP archive, using 
+the same file name. 
  
 ### Architecture of using EC in xrootd
 
